monitoring/controllers/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: ops-monitoring
spec:
  type: ClusterIP
  selector: { app: loki }
  ports:
    - name: http
      port: 3100
      targetPort: http
    - name: grpc
      port: 9095
      targetPort: grpc
